# SC2

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
core/: __init__.py  context.py  engine.py  knowledge_graph.py  nodes.py  prompts.py
examples/: basic_usage.py  chained_analysis.py  complex_workflow.py  knowledge_graph_example.py
examples/custom_nodes/: text_analyzer.py
scriptchain/: __init__.py  cli.py
scriptchain/core/: engine.py  prompts.py  token_tracker.py
scriptchain/utils/: serialization.py
tests/: test_core.py  test_knowledge_graph.py
utils/: retry.py
